<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/network_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_network_title"
            android:textAppearance="@style/HighLightText" />

        <TextView
            android:id="@+id/network_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/page_network_summary"
            android:textAppearance="@style/Content" />

        <CheckBox
            android:id="@+id/network_enable_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/page_network_pref_wifi_toggle" />

        <CheckBox
            android:id="@+id/network_enable_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/page_network_pref_data_toggle" />

        <CheckBox
            android:id="@+id/network_enable_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/page_network_pref_gps_toggle" />

        <com.mokee.mksetupwizard.widget.NavButton
            style="@style/NavigationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="80dp"
            android:background="@color/transparent"
            android:text="@string/page_next" />
    </LinearLayout>

</RelativeLayout>